--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+.bg-container {
+  padding: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.row-1 {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.container-1 {
+  background-color: grey;
+  border-radius: 10px;
+  width: 49%;
+  height: 40px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding-left: 10px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container-2 {
+  background-color: grey;
+  display: flex;
+  border-radius: 10px;
+  width: 25%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-3 {
+  background-color: grey;
+  display: flex;
+  border-radius: 10px;
+  width: 73%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  color: white;
+}
+
+.container-4 {
+  background-color: grey;
+  display: flex;
+  border-radius: 10px;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  color: white;
 }
